# 7z-smart-extract-here

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build_test.bat
docs/superpowers/plans/: 2026-04-01-7z-smart-extract-context-menu.md
src/: ArchiveAnalyzer.cpp  ArchiveAnalyzer.h  ConflictHandler.cpp  ConflictHandler.h  ContextMenu.cpp  ContextMenu.h  Registry.cpp  Registry.h  Resource.h  Resource.rc  exports.def  main.cpp
tests/: CMakeLists.txt  test_analyzer.cpp
